@@ -8,6 +8,8 @@
    compilation buffer.
  * added eclim-java-generate-getter which generates a getter method
  for the symbol at point.
+ * added eclim-java-refactor-move-class which allows moving a top level
+   class or interface from one package to another.
 
 == 0.3
 
